--- a/gitzebo/static/gitzebo.css
+++ b/gitzebo/static/gitzebo.css
@@ -1,5 +1,13 @@
+.header h2 {
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+    padding-top: 0px;
+    margin-top: 0px;
+    font-size: 2em;
+}
 .header {
     width: 100%;
+    padding-bottom: 0.5em;
     border-bottom: 1px solid #cccccc;
 }
 
